--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Hank Quinlan, Horrible Cop
+title: Jun Ouyang, University of Toronto
 ---
 <div class="blurb">
 	<h1>Hi there, I'm Hank Quinlan!</h1>
