--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ title: Jun Ouyang, University of Toronto
 ---
 <div class="blurb">
 	<h1>Hi there, I'm Jun Ouyang!</h1>
-	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+	<p>I am a fourth year student at the<em>University of Toronto</em>. <a href="/about">Read more about my life...</a></p>
 </div><!-- /.blurb -->
