--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Jun Ouyang, University of Toronto
 ---
 <div class="blurb">
+	<IMG SRC="https://ouyangjunaoyun.github.io/photo/profile.jpg" ALT="Profile Photo" WIDTH=256 HEIGHT=256 align="right">
 	<h1>Hi there, I'm Jun Ouyang!</h1>
-	<IMG SRC="https://ouyangjunaoyun.github.io/photo/profile.jpg" ALT="Profile Photo" WIDTH=64 HEIGHT=64 align="left">
 	<p>I am a fourth year student at the<em>University of Toronto</em>. <a href="/about">Read more about my life...</a></p>
 </div><!-- /.blurb -->
