--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@ layout: default
 title: Jun Ouyang, University of Toronto
 ---
 <div class="blurb">
-	<IMG SRC="https://ouyangjunaoyun.github.io/photo/profile.jpg" ALT="Profile Photo" WIDTH=200 HEIGHT=200 style="float: right;">
+	<picture>
+ 	 	<source media="(min-width: 650px)" srcset="img_pink_flowers.jpg">
+ 	 	<source media="(min-width: 465px)" srcset="img_white_flower.jpg">
+  		<img SRC="https://ouyangjunaoyun.github.io/photo/profile.jpg" ALT="Profile Photo" WIDTH=200 HEIGHT=200 style="float: left;">	
+	</picture>
 	<h1>Hi there, I'm Jun Ouyang!</h1>
 	<p>I am a fourth year student at the <em>University of Toronto</em>. <a href="/about">Read more about my life...</a></p>
 </div><!-- /.blurb -->
