--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@ title: Jun Ouyang, University of Toronto
  	 	<source media="(min-width: 465px)" srcset="img_white_flower.jpg">
   		<img SRC="https://ouyangjunaoyun.github.io/photo/profile.jpg" ALT="Profile Photo" WIDTH=200 HEIGHT=200 style="float: left;">	
 	</picture>
-	<h1>Hi there, I'm Jun Ouyang!</h1>
+	<h1>Hi there, I'm Jun Ouyang! t1</h1>
 	<p>I am a fourth year student at the <em>University of Toronto</em>. <a href="/about">Read more about my life...</a></p>
 </div><!-- /.blurb -->
