--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@ title: Jun Ouyang, University of Toronto
 ---
 	
 <picture>
- 	 <source media="(min-width: 465px)" srcset="https://ouyangjunaoyun.github.io/photo/profile.jpg">
+ 	 
+	<img SRC="https://ouyangjunaoyun.github.io/photo/profile.jpg" ALT="Profile Photo" WIDTH=256 HEIGHT=256 align="right">
 </picture>
 
 <div class="blurb">
