--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Jun Ouyang, University of Toronto
 	
 <picture>
  	 
-	<img SRC="https://ouyangjunaoyun.github.io/photo/profile.jpg" ALT="Profile Photo" WIDTH=256 HEIGHT=256 align="right">
+	<img SRC="https://ouyangjunaoyun.github.io/photo/profile.jpg" ALT="Profile Photo" WIDTH=256 HEIGHT=256 style="width:auto;">
 </picture>
 
 <div class="blurb">
