--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@ title: Jun Ouyang, University of Toronto
 </picture>
 
 <div class="blurb">
-	<h1>Hi there, I'm Jun Ouyang!</h1>
+	<h1>Hi there, I'm Jun Ouyang! t1</h1>
 	<p>I am a fourth year student at the <em>University of Toronto</em>. <a href="/about">Read more about my life...</a></p>
 </div><!-- /.blurb -->
