--- a/index.html
+++ b/index.html
@@ -10,5 +10,14 @@ title: Jun Ouyang, University of Toronto
 
 <div class="blurb">
 	<h1>Hi there, I'm Jun Ouyang!</h1>
-	<p>I am a fourth year student at the <em>University of Toronto</em>. <a href="/about">Read more about my life...</a></p>
+	<p>I am a fourth year student at the <em>University of Toronto</em>. I intend to pursue a career in portfolio management in a leading Canadian company upon completion of the MMF program. After gaining experience, I want to manage my own fund specializing in the pharmaceutical domain, as startups in this sector are struggling to attract funding to stay at the forefront of medical technology given the risk involved. Therefore, I want to create better business models to solve this problem. 
+	
+My undergraduate education has prepared me for the rigors of graduate study. Gaining knowledge in areas like PDEs, Stochastic Calculus, mathematical finance, MATLAB, VBA and C programming has acquainted me with the prerequisites of the quantitative finance field. Especially, I once took an independent course exploring numerical methods for pricing and hedging the risk of American Put Options supervised by Professor Kenneth Jackson. Fascinated by the efficiency of applying quantitative skills into finance, I determined to pursue MMF at the University of Toronto.
+	
+Academic efforts aside, I was intrigued by portfolio management after assisting Professor Luis Seco in constructing portfolios for a major bank based on its investment goals, where I was involved in researching characteristics of various assets and preparing presentation materials about portfolio construction for clients. This gave me a chance to interact with the clients, which improved my communication skills. 
+
+Furthermore, my internship experiences have nurtured my quantitative skills. During my internship in the Longjiang Bank Corporation, I helped constructing portfolios for clients, where I realized how the insufficiency in proprietary quantitative tools affected their performance, because they needed to buy quotes from trustable third parties specializing in quantitative pricing. This further drove me to be a portfolio manager with good quantitative skills.
+
+		<a href="/about">Read more about my life...</a></p>
+	
 </div><!-- /.blurb -->
