--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@ title: Jun Ouyang, University of Toronto
 </picture>
 
 <div class="blurb">
+  <h3>Contact Info</h3>
+  <p>Work e-mail: <a href="mailto:jun.ouyang@mail.utoronto.ca">jun.ouyang@mail.utoronto.ca</a></p>
+<p>Address: The Advantage Group International, Inc.
+20 Toronto Street, Sixth Floor  |  Toronto, ON   M5C 2B8  |  Canada</p>
+	<p>tel: +1 416 863 0685 x180 </p>
+</div>
+
+<div class="blurb">
 	<h1>Hi there, I'm Jun Ouyang!</h1>
 	<p>I am a fourth year student at the <em>University of Toronto</em>. I intend to pursue a career in portfolio management in a leading Canadian company upon completion of the MMF program. After gaining experience, I want to manage my own fund specializing in the pharmaceutical domain, as startups in this sector are struggling to attract funding to stay at the forefront of medical technology given the risk involved. Therefore, I want to create better business models to solve this problem. 
 	
