--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@ title: Jun Ouyang, University of Toronto
 </picture>
 
 <div class="blurb">
-  <h3>Contact Info</h3>
-  <p>Work e-mail: <a href="mailto:jun.ouyang@mail.utoronto.ca">jun.ouyang@mail.utoronto.ca</a></p>
-<p>Address: The Advantage Group International, Inc.
-20 Toronto Street, Sixth Floor  |  Toronto, ON   M5C 2B8  |  Canada</p>
-	<p>tel: +1 416 863 0685 x180 </p>
+  <h2>Contact Info: </h2>
+  <p><small>Work e-mail: <a href="mailto:jun.ouyang@mail.utoronto.ca">jun.ouyang@mail.utoronto.ca</a></small></p>
+<p><small>Address: The Advantage Group International, Inc.<br>
+20 Toronto Street, Sixth Floor  |  Toronto, ON   M5C 2B8  |  Canada</small></p>
+	<p><small>tel: +1 416 863 0685 x180 </small></p>
 </div>
 
 <div class="blurb">
