--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ title: Jun Ouyang, University of Toronto
 <p><small>Address: The Advantage Group International, Inc.<br>
 20 Toronto Street, Sixth Floor  |  Toronto, ON   M5C 2B8  |  Canada</small></p>
 	<p><small>tel: +1 416 863 0685 x180 </small></p>
+	<p><small><a href="https://www.linkedin.com/in/junouyang/">Follow me on my Linkedin.</a> </small></p>
 </div>
 
 <div class="blurb">
