--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@ title: Jun Ouyang, University of Toronto
 
 <div class="blurb">
   <h2>Contact Info: </h2>
-  <p><small>Work e-mail: <a href="mailto:jun.ouyang@mail.utoronto.ca">jun.ouyang@mail.utoronto.ca</a></small></p>
-<p><small>Address: The Advantage Group International, Inc.<br>
-20 Toronto Street, Sixth Floor  |  Toronto, ON   M5C 2B8  |  Canada</small></p>
-	<p><small>tel: +1 416 863 0685 x180 </small></p>
-	<p><small><a href="https://www.linkedin.com/in/junouyang/">Follow me on my Linkedin.</a> </small></p>
+  <p><small>Work e-mail:<u> <a href="mailto:jun.ouyang@mail.utoronto.ca">jun.ouyang@mail.utoronto.ca</a></u></small></p>
+	<p><small>Address: <u>The Advantage Group International, Inc.</u><br>
+		<u>20 Toronto Street, Sixth Floor  |  Toronto, ON   M5C 2B8  |  Canada</u></small></p>
+	<p><small><u>tel: +1 416 863 0685 x180 </u></small></p>
+	<p><small><u><a href="https://www.linkedin.com/in/junouyang/">Follow me on my Linkedin.</a></u> </small></p>
 </div>
 
 <div class="blurb">
