--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 layout: default
 title: Jun Ouyang, University of Toronto
 ---
+<div class="blurb">
+	<h1>Hi there, I'm Jun Ouyang!</h1>
 	
+</div><!-- /.blurb -->
+
 <picture>
  	 
 	<img SRC="https://ouyangjunaoyun.github.io/photo/profile.jpg" ALT="Profile Photo" WIDTH=256 HEIGHT=256 style="width:auto;">
