--- a/academic/index.html
+++ b/academic/index.html
@@ -13,12 +13,13 @@ title: Jun Ouyang, University of Toronto
 </div><!-- /.blurb -->
 
 <div class="blurb">
-  <h2>Contact Info: </h2>
-  <p><small>Work e-mail:<u> <a href="mailto:jun.ouyang@mail.utoronto.ca">jun.ouyang@mail.utoronto.ca</a></u></small></p>
-	<p><small>Address: <u>The Advantage Group International, Inc.</u><br>
-		<u>20 Toronto Street, Sixth Floor  |  Toronto, ON   M5C 2B8  |  Canada</u></small></p>
-	<p><small><u>tel: +1 416 863 0685 x180 </u></small></p>
-	<p><small><u><a href="https://www.linkedin.com/in/junouyang/">Follow me on my Linkedin.</a></u> </small></p>
+  <ul style="list-style-type:disc">
+  <li><h2><a href="https://ouyangjunaoyun.github.io/_file/AmericanOptionReport.pdf">Accurate and Efficient Numerical Methods for Pricing and Hedging American Put Options</a></h2>
+	  <p><b>Description: </b> </p>
+	  <p><small>When I was in my junior year, I took one independent studying course exploring numerical methods for pricing and hedging the risk of American Put Options supervised by Professor Kenneth Jackson. In contrast to binomial lattice models, the numerical and computational method priced the options more accurately as well as promised more effective methods for hedging the risk.</small> </p></li>
+  <li>Tea</li>
+  <li>Milk</li>
+</ul> 
 </div>
 
 
