--- a/academic/index.html
+++ b/academic/index.html
@@ -14,10 +14,17 @@ title: Jun Ouyang, University of Toronto
 
 <div class="blurb">
   <ul style="list-style-type:disc">
-  <li><h2><a href="https://ouyangjunaoyun.github.io/file/AmericanOptionReport.pdf">Accurate and Efficient Numerical Methods for Pricing and Hedging American Put Options</a></h2>
+  <li><h2><a href="https://ouyangjunaoyun.github.io/file/AmericanOptionReport.pdf">Accurate and Efficient Numerical Methods for Pricing and Hedging American Put Options --- April 21, 2016</a></h2>
 	  <p><b>Description: </b> </p>
-	  <p><small>When I was in my junior year, I took one independent studying course exploring numerical methods for pricing and hedging the risk of American Put Options supervised by Professor Kenneth Jackson. In contrast to binomial lattice models, the numerical and computational method priced the options more accurately as well as promised more effective methods for hedging the risk.</small> </p></li>
-  <li>Tea</li>
+	  <p><small>When I was in my junior year, I took one independent studying course exploring numerical methods for pricing and hedging the risk of American Put Options supervised by Professor Kenneth Jackson. In contrast to binomial lattice models, the numerical and computational method priced the options more accurately as well as promised more effective methods for hedging the risk.
+</small> </p></li>
+  
+	  
+<li><h2><a href="http://rucs.ca/scientific-computings/methods-for-pricing-and-hedging">Accurate and Efficient Numerical Methods for Pricing and Hedging American Put Options --- Nov, 2016</a></h2>
+	  <p><b>Description: </b> </p>
+	<p><small>This is a elaborate version about <b>Accurate and Efficient Numerical Methods for Pricing and Hedging American Put Options</b> publicated on <em>RUCS, University of Toronto</em>.</small> </p></li>
+  
+<li></li>
   <li>Milk</li>
 </ul> 
 </div>
