--- a/academic/index.html
+++ b/academic/index.html
@@ -24,8 +24,10 @@ title: Jun Ouyang, University of Toronto
 	  <p><b>Description: </b> </p>
 	<p><small>This is a elaborate version about <b>Accurate and Efficient Numerical Methods for Pricing and Hedging American Put Options</b> publicated on <em>RUCS, University of Toronto</em>.</small> </p></li>
   
-<li></li>
-  <li>Milk</li>
+<li><h2><a href="https://ouyangjunaoyun.github.io/file/JulioReport.pdf">Upper Bounds for the Change in Price after Modifying Parameters of the Black Scholes Equation --- Oct 23, 2016</a></h2>
+	  <p><b>Description: </b> </p>
+	<p><small>I worked as a research assistant at RiskLab, University of Toronto during April - Oct 2016. At that time, I was collaborating with Graduate Student Julio Hernandez on this fansinating research topic. This is a small report I did to conclude my contribution.</small> </p></li>
+  
 </ul> 
 </div>
 
