--- a/academic/index.html
+++ b/academic/index.html
@@ -28,6 +28,11 @@ title: Jun Ouyang, University of Toronto
 	  <p><b>Description: </b> </p>
 	<p><small>I worked as a research assistant at RiskLab, University of Toronto during April - Oct 2016. At that time, I was collaborating with Graduate Student Julio Hernandez on this fansinating research topic. This is a small report I did to conclude my contribution.</small> </p></li>
   
+	 
+<li><h2><a href="https://ouyangjunaoyun.github.io/file/BigDataInFinanceReport.pdf">Machine Learning Approaches to Stock Selection Model --- Dec, 2017</a></h2>
+	  <p><b>Description: </b> </p>
+	<p><small>I Worked with two teamates on the course project: Big Data in Finance. In the project we developed an Machine Learning approches to stock selection using decision trees. More details can be reached via this report and the back test result on Quantopian.</small> </p></li>
+  
 </ul> 
 </div>
 
