--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ title: Jun Ouyang, University of Toronto
 <picture>
  	 
 	<img SRC="https://ouyangjunaoyun.github.io/photo/profile.jpg" ALT="Profile Photo" WIDTH=256 HEIGHT=256 style="width:auto;">
+	<img SRC="https://ouyangjunaoyun.github.io/photo/84PLF.jpg" ALT="Profile Photo" WIDTH=256 HEIGHT=256 style="width:auto;">
 </picture>
 
 <div class="blurb">
