--- a/academic/index.html
+++ b/academic/index.html
@@ -32,7 +32,12 @@ title: Jun Ouyang, University of Toronto
 <li><h2><a href="https://ouyangjunaoyun.github.io/file/BigDataInFinanceReport.pdf">Machine Learning Approaches to Stock Selection Model --- Dec, 2017</a></h2>
 	  <p><b>Description: </b> </p>
 	<p><small>I Worked with two teamates on the course project: Big Data in Finance. In the project we developed an Machine Learning approches to stock selection using decision trees. More details can be reached via this report and the back test result on Quantopian.</small> </p></li>
-  
+
+<li><h2><a href="https://ouyangjunaoyun.github.io/file/Ouyang_jo2524_report.pdf">Summer Internship Project --- Aug, 2018</a></h2>
+	  <p><b>Description: </b> </p>
+	<p><small>I Worked on an project developing G2++ model within the framework of the Pioneer library. </small> </p></li>
+ 
+	  
 </ul> 
 </div>
 
