--- a/drive/index.html
+++ b/drive/index.html
@@ -1,1 +1,45 @@
 
+---
+layout: default
+title: Jun Ouyang, University of Toronto
+---
+
+<div class="blurb">
+	<h1>Reseach Portal</h1>
+	
+	<p><small>This is the portal for all reports for various research projects. Thank you for your support from all supervisors and partners.</small></p>
+	
+
+	
+</div><!-- /.blurb -->
+
+<div class="blurb">
+  <ul style="list-style-type:disc">
+  <li><h2><a href="https://ouyangjunaoyun.github.io/file/project.ipynb">Accurate and Efficient Numerical Methods for Pricing and Hedging American Put Options --- April 21, 2016</a></h2>
+	  <p><b>Description: </b> </p>
+	  <p><small>When I was in my junior year, I took one independent studying course exploring numerical methods for pricing and hedging the risk of American Put Options supervised by Professor Kenneth Jackson. In contrast to binomial lattice models, the numerical and computational method priced the options more accurately as well as promised more effective methods for hedging the risk.
+</small> </p></li>
+  
+	  
+<li><h2><a href="http://rucs.ca/scientific-computings/methods-for-pricing-and-hedging">Accurate and Efficient Numerical Methods for Pricing and Hedging American Put Options --- Nov, 2016</a></h2>
+	  <p><b>Description: </b> </p>
+	<p><small>This is a elaborate version about <b>Accurate and Efficient Numerical Methods for Pricing and Hedging American Put Options</b> publicated on <em>RUCS, University of Toronto</em>.</small> </p></li>
+  
+<li><h2><a href="https://ouyangjunaoyun.github.io/file/JulioReport.pdf">Upper Bounds for the Change in Price after Modifying Parameters of the Black Scholes Equation --- Oct 23, 2016</a></h2>
+	  <p><b>Description: </b> </p>
+	<p><small>I worked as a research assistant at RiskLab, University of Toronto during April - Oct 2016. At that time, I was collaborating with Graduate Student Julio Hernandez on this fansinating research topic. This is a small report I did to conclude my contribution.</small> </p></li>
+  
+	 
+<li><h2><a href="https://ouyangjunaoyun.github.io/file/BigDataInFinanceReport.pdf">Machine Learning Approaches to Stock Selection Model --- Dec, 2017</a></h2>
+	  <p><b>Description: </b> </p>
+	<p><small>I Worked with two teamates on the course project: Big Data in Finance. In the project we developed an Machine Learning approches to stock selection using decision trees. More details can be reached via this report and the back test result on Quantopian.</small> </p></li>
+
+<li><h2><a href="https://ouyangjunaoyun.github.io/file/Ouyang_jo2524_report.pdf">Summer Internship Project --- Aug, 2018</a></h2>
+	  <p><b>Description: </b> </p>
+	<p><small>I Worked on an project developing G2++ model within the framework of the Pioneer library. </small> </p></li>
+ 
+	  
+</ul> 
+</div>
+
+
